--- a/build-tst/index.html
+++ b/build-tst/index.html
@@ -25,6 +25,9 @@
   </div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script>
+    window.mscc = mscc
+  </script>
 <script src="/static/js/graph-explorer-v2.js"></script></body>
 
 </html>
